# rail/src/main/java/com/joshuaharwood/velociraptor/rail/EndpointTrainUids.java
@@ -1,5 +1,0 @@
-package com.joshuaharwood.velociraptor.rail;
-
-public record EndpointTrainUids(String originTrainUid,
-                                String destinationTrainUid) {
-}
